// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the CellFixedWidth component matches the snapshot 1`] = `
<span
  className="bAwyhv"
>
  This is a cell with a fixed width
</span>
`;

exports[`the CellIcon component matches the snapshot 1`] = `
<span
  className="jskYcN"
>
  Icon
</span>
`;

exports[`the CellMinWidth component matches the snapshot 1`] = `
<span
  className="fOCUHL"
>
  This is a call with a min width
</span>
`;

exports[`the CellPrimary component matches the snapshot 1`] = `
<span
  className="huOtbH"
>
  This is a primary cell
</span>
`;

exports[`the CellPrimary with responsiveHeaders matches the snapshot 1`] = `
<span
  className="hURjvI"
>
  This is a primary cell with responsive headers
</span>
`;
